cmake_minimum_required(VERSION 3.5)

project(chirp-viewer LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt5 COMPONENTS Widgets REQUIRED)
find_package(Qt5 COMPONENTS SerialPort REQUIRED)
find_package(Qt5 COMPONENTS PrintSupport REQUIRED)

set(PINGCPP_SRC ${PROJECT_SOURCE_DIR}/lib/ping-cpp/src)
set(PINGPROTOCOL_SRC ${PROJECT_SOURCE_DIR}/lib/ping-cpp/lib/ping-protocol/src)

include_directories(${PROJECT_SOURCE_DIR}/lib/ping-cpp/src/message)
add_executable(chirp-viewer
    com-handle.cpp
    com-handle.h
    com-parser.cpp
    com-parser.h
    device.cpp
    device.h
    main.cpp
    mainwindow.cpp
    mainwindow.h
    mainwindow.ui
    port-scanner.cpp
    port-scanner.h
    qcustomplot.h
    qcustomplot.cpp
    ${PINGCPP_SRC}/message/ping-message-chirp.h
)

target_link_libraries(chirp-viewer PRIVATE Qt5::Widgets Qt5::SerialPort Qt5::PrintSupport)
# target_link_libraries(chirp-viewer PRIVATE Qt5::Widgets Qt5::SerialPort Qt5::PrintSupport GL)
# add_definitions(-DQCUSTOMPLOT_USE_OPENGL)

set(PINGCPP_SRC ${PROJECT_SOURCE_DIR}/lib/ping-cpp/src)
add_custom_target(generate
  # generate ping-cpp message files
  ${PINGCPP_SRC}/generate/generate-message.py --output-dir ${PINGCPP_SRC}/message
  COMMENT "generating ping-cpp messages"
)

add_dependencies(chirp-viewer generate)

# add_custom_command(OUTPUT ${PROJECT_SOURCE_DIR}/build/chirp-viewer_autogen/include/ui_mainwindow.h
#   COMMAND sed -i 's%../../qcustomplot.h%../../../qcustomplot.h%' ${PROJECT_SOURCE_DIR}/build/chirp-viewer_autogen/include/ui_mainwindow.h
#   COMMENT "hacking qcustomplot include path in qt autogenerated mainwindow ui header"
# )

add_custom_target(fix-ui
  COMMAND sed -i 's%../../qcustomplot.h%../../../qcustomplot.h%' ${PROJECT_SOURCE_DIR}/build/chirp-viewer_autogen/include/ui_mainwindow.h
  COMMENT "hacking qcustomplot include path in qt autogenerated mainwindow ui header"
)

# add_custom_target(fix-ui
#   COMMAND sed -i 's%../../qcustomplot.h%../../../qcustomplot.h%' ${PINGCPP_SRC}/build/chirp-viewer_autogen/include/ui_mainwindow.h
#   COMMENT "hacking qcustomplot include path in qt autogenerated mainwindow ui header"
# )

add_custom_command(OUTPUT ${PINGCPP_SRC}/message/ping-message-chirp.h
  # generate ping-cpp message files
  COMMAND ${PINGPROTOCOL_SRC}/generator.py --definition ${PROJECT_SOURCE_DIR}/ping-chirp.json --template ${PINGCPP_SRC}/generate/templates/ping-message-.h.in > ${PINGCPP_SRC}/message/ping-message-chirp.h
  COMMENT "generating pingchirp messages"
)
